<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone Bill Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="accept">I Agree</string>
    <string name="buy">Upgrade to Premium</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="reload_contacts">Reload Contacts Info</string>
    <string name="ayansh">Ayansh TechnoSoft</string>
    <string name="loading">Loading....</string>
	<string name="upload">Upload</string>
	<string name="select_file_name">Select a File</string>
	<string name="pwd_for_file">Password (If file is protected)</string>
	<string name="inc_disc_calls">Include discounted calls</string>
	<string name="inc_disc_calls_summ">Include discounted calls in analytics</string>
	<string name="download_db">Download DB</string>
	
	<string-array name="bill_types">
        <item>APPM : Airtel Post Paid Mobile</item>
        <item>VPPM : Vodafone Post Paid Mobile</item>
        <item>RPPM : Reliance Post Paid Mobile</item>
    </string-array>
    
	<string-array name="analysis_type">
	    <item>Itemised Bill</item>
        <item>Top 5 callers by Name</item>
        <item>Call costs by Contact Group</item>
    </string-array>
    
</resources>
